# OuterSpatialEngine

./: .gitignore  BazaarBot.h  CMakeLists.txt  README.md  color_test.sh  main.cc  testing.cc
auction/: auction_house.h
common/: agent.h  commodity.h  concurrency.h  history.h  messages.h
metrics/: display.h  logger.h  metrics.h
traders/: AI_trader.h  fake_trader.h  human_trader.h  inventory.h  roles.h  trader.h
